AP-20585: Remove option to use async HTTP client
AP-20585 (Remove option to use asynchronous HTTP client implementation from REST nodes)